# forex-trader

./: README.md  billie_ML_FOREX.ipynb  data_requests.py  docker-compose.yml
.ipynb_checkpoints/: Dockerfile-checkpoint
datareader/: data_requests.py
db/: init.sql
stocktui/: Cargo.toml  ratatui-vers.rs
stocktui/src/: async_data.rs  historical.rs  main.rs  stock_data.rs  stock_data_widget.rs
stocktui/src/ui/widgets/: stock_data_widget.rs
