[package]
name = "stocktui"
version = "0.1.0"
edition = "2021"
entry_points = ["src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version= "^1", features=["full"]}
reqwest = {version = "^0.11", features = ["json", "blocking"] }
serde = {version = "^1", features=["derive"]}
serde_json = "^1.0"
tui = "^0.19"
ratatui = {version = "^0.23", features = ["default"]}
crossterm = "^0.27"
cli-candlestick-chart = "0.4.1"
time = "^0.3.1"
yahoo_finance_api = "2.0.1"
tokio-test = "^0.4.3"
chrono = "0.4.19" 
futures = "^0.3.28"